[Core] Modification de la traduction fr de tracker dans le cas d'une nouvelle demande. Concerne #56925 https://redmine.orupaca.fr/issues/56925

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -288,7 +288,7 @@ fr:
   field_notes: Notes
   field_is_closed: Demande fermée
   field_is_default: Valeur par défaut
-  field_tracker: Tracker
+  field_tracker: Type (tracker)
   field_subject: Sujet
   field_due_date: Echéance
   field_assigned_to: Assigné à
