--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -289,7 +289,7 @@ fr:
   field_is_closed: Demande fermée
   field_is_default: Valeur par défaut
   field_tracker: Type (tracker)
-  field_subject: Sujet
+  field_subject: Titre
   field_due_date: Echéance
   field_assigned_to: Assigné à
   field_priority: Priorité
